--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
       <div class="game-block">
         <div class="face front"><i class="fa-regular fa-circle-question"></i></div>
-        <div class="face back"><span>Moahmed</span><img src="imgs/05.jpg"></div>
+        <div class="face back"><span>Mohamed</span><img src="imgs/05.jpg"></div>
       </div>
       <div class="game-block">
         <div class="face front"><i class="fa-regular fa-circle-question"></i></div>
